# emcc-wasm

./: LICENSE  README.md  build.sh  index.html  package.json
src/c/: hello.c  simple.c  vectors.c  vectorsShared.c
src/cpp/: gol.cpp
src/js/: vectors.js  vectorsJS.js  vectorsShared.js  vectorsSharedJS.js
src/ts-asc/: fib.ts
src/wasi/: README.md  sysclock.wat
src/wasi/c/: hello.c
src/wasi/rust/: index.html
src/wasi/rust/prebuilt-wasm/js-sys-bindgen/: wasm_prs.js  wasm_prs_bg.wasm  wasm_prs_bg.wasm.d.ts
src/wasi/rust/prebuilt-wasm/wasm-2d/: wasm_gol_bindgen.d.ts  wasm_gol_bindgen.js  wasm_gol_bindgen_bg.wasm  wasm_gol_bindgen_bg.wasm.d.ts
src/wasi/rust/prebuilt-wasm/wasm-input/: wasm_gol_bindgen.d.ts  wasm_gol_bindgen.js  wasm_gol_bindgen_bg.wasm  wasm_gol_bindgen_bg.wasm.d.ts
src/wasi/rust/prebuilt-wasm/wasm-pack/: wasm_game_of_life.d.ts  wasm_game_of_life_bg.wasm
src/wasi/rust/prebuilt-wasm/wasm-wgpu/: wasm_wgpu_w.d.ts  wasm_wgpu_w.js  wasm_wgpu_w_bg.wasm  wasm_wgpu_w_bg.wasm.d.ts
src/wasi/rust/rusty-wasm/: Cargo.toml
src/wasi/rust/rusty-wasm/src/: lib.rs
src/wasi/rust/wasm-2d/: Cargo.toml
src/wasi/rust/wasm-2d/src/: lib.rs
src/wasi/rust/wasm-cla/: Cargo.toml
src/wasi/rust/wasm-cla/src/: main.rs
src/wasi/rust/wasm-crs/: index.html
src/wasi/rust/wasm-input/: Cargo.toml
src/wasi/rust/wasm-sys-bindgen/: Cargo.toml
src/wasi/rust/wasm-wgpu/: Cargo.toml  build.sh
src/wasi/rust/wasm-wgpu/src/: lib.rs  main.rs
src/wasm/: demo.wat  memory.wat  shared_memory.wat  vectorsEW.wat  vectorsElementWise.wat  vectorsSIMD.wat  vectorsUnroll.wat
(+11 files in other folders)
