[package]
name = "wasm-wgpu-w"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.7"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "24.0"
winit = { version = "0.29.15", features = ["rwh_06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element"] }

[[bin]]
name = "wasm-wgpu-w"
path = "src/main.rs"
